--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 
 <body>
 
-<!-- Change this code here by copy and pasting your template on line 15 -->
-<form id="mainConversation" cf-form>
-
-  <cf-robot-message cf-questions="Hello, Welcome to the City of Albemarle IoT Chat Bot"></cf-robot-message>
-  <cf-robot-message cf-questions="Before you being, remember, all information on this page is legal and retrieved from the Shodan API"></cf-robot-message>
-  <cf-robot-message cf-questions="The creator of this chat bot cannot be held liable for what you decide to do with this information"></cf-robot-message>
+  <form id="mainConversation" cf-form>
+    <cf-robot-message cf-questions="Hello, Welcome to the City of Albemarle IoT Chat Bot"></cf-robot-message>
+    <cf-robot-message cf-questions="Before you being, remember, all information on this page is legal and retrieved from the Shodan API"></cf-robot-message>
+    <cf-robot-message cf-questions="The creator of this chat bot cannot be held liable for what you decide to do with this information"></cf-robot-message>
+  </form>
 
 </body>
 </html>
