--- a/index.html
+++ b/index.html
@@ -10,11 +10,20 @@
 
 <body>
 
-  <form id="mainConversation" cf-form>
-    <cf-robot-message cf-questions="Hello, Welcome to the City of Albemarle IoT Chat Bot"></cf-robot-message>
-    <cf-robot-message cf-questions="Before you being, remember, all information on this page is legal and retrieved from the Shodan API"></cf-robot-message>
-    <cf-robot-message cf-questions="The creator of this chat bot cannot be held liable for what you decide to do with this information"></cf-robot-message>
-  </form>
+    <form id="form" cf-form>
+
+        <cf-robot-message cf-questions="Hello my friend"></cf-robot-message>
+        <cf-robot-message cf-questions="Let's get started"></cf-robot-message>
+      
+        <label for="radio">
+          <input cf-questions="Ready to signup for our demo newsletter?" cf-label="Yes, let's begin!" type="radio" value="0">
+          Start
+        </label>
+        <input type="text" name="FNAME" cf-questions="What is your firstname?">
+        <input type="text" name="LNAME" cf-questions="What is your lastname?">
+        <input type="text" name="EMAIL" cf-questions="What is your email?">
+      </form>
+      <div id="cf-context" role="cf-context" cf-context></div>
 
 </body>
 </html>
