--- a/index.html
+++ b/index.html
@@ -26,4 +26,5 @@
       <div id="cf-context" role="cf-context" cf-context></div>
 
 </body>
+<script src="scripts/chatbotscript.js"</script>
 </html>
