Fixed Closing tag

--- a/index.html
+++ b/index.html
@@ -26,5 +26,5 @@
       <div id="cf-context" role="cf-context" cf-context></div>
 
 </body>
-<script src="scripts/chatbotscript.js"</script>
+<script src="scripts/chatbotscript.js"></script>
 </html>
