--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
 
   <form id="form" cf-form cf-prevent-autofocus>
-    <input type="text" placeholder="some text" cf-questions="This text is from the attribute cf-questions (1/2)||This text is from the attribute cf-questions (2/2)" />
+    <cf-robot-message cf-questions="Hello and Welcome to the City of Albemarle Chat bot"></cf-robot-message>
+    <cf-robot-message cf-questions="Every few Weeks, I update myself from the Shodan API"></cf-robot-message>
+    <cf-robot-message cf-questions="Remember, the creator of this chat bot cannot be held liable for what you do with the information presented"></cf-robot-message>
   </form>
   <div id="cf-context" role="cf-context" cf-context></div>
 
