--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <cf-robot-message cf-questions="Hello and Welcome to the City of Albemarle Chat bot"></cf-robot-message>
     <cf-robot-message cf-questions="Every few Weeks, I update myself from the Shodan API"></cf-robot-message>
     <cf-robot-message cf-questions="Remember, the creator of this chat bot cannot be held liable for what you do with the information presented"></cf-robot-message>
+    
+    <fieldset cf-questions="Do you understand?">
+      <input type="checkbox" name="verification" id="verification" cf-label="I understand" />
+    </fieldset>
+    
   </form>
   <div id="cf-context" role="cf-context" cf-context></div>
 
