--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
     <cf-robot-message cf-questions="Ok, what are you looking for in the City of Albemarle IoT devices?"></cf-robot-message>
 
-    <input type="radio" name="vmax-cameras" id="vmax-camera" cf-label="V MAX Cameras" />
-    <input type="radio" name="all-port-eighty" id="all-port-eighty" cf-label="All Port 80s" />
-    <input type="radio" name="linksys-routers" id="linksys-routers" cf-label="Linksys Routers" />
+    <input type="radio" name="searchFor" id="vmax-camera" cf-label="V MAX Cameras" />
+    <input type="radio" name="searchFor" id="all-port-eighty" cf-label="All Port 80s" />
+    <input type="radio" name="searchFor" id="linksys-routers" cf-label="Linksys Routers" />
 
   </form>
   <div id="cf-context" role="cf-context" cf-context></div>
