minor css tweaks

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-  <form id="form" cf-form cf-prevent-autofocus>
+  <form id="form" cf-form>
     <cf-robot-message cf-questions="Hello and Welcome to the City of Albemarle IOT Chat bot"></cf-robot-message>
     <cf-robot-message cf-questions="Every few Weeks, I update myself from the Shodan API"></cf-robot-message>
     <cf-robot-message cf-questions="All devices found are port 80 only."></cf-robot-message>
