--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <input type="radio" name="searchFor" id="all-port-eighty" cf-label="All Port 80s" />
     <input type="radio" name="searchFor" id="linksys-routers" cf-label="Linksys Routers" />
 
+    <cf-robot-message cf-questions="Ok, let's grab all the VMAX cameras" cf-conditional-searchFor="vmax-cameras"></cf-robot-message>
+
   </form>
   <div id="cf-context" role="cf-context" cf-context></div>
 
