added place holder

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
     <cf-robot-message cf-questions="Ok, let's grab all the VMAX cameras" cf-conditional-searchFor="vmax-cameras"></cf-robot-message>
 
+    <input type="text" cf-questions="This is a placeholder to stop auto looping"></input>
 
   </form>
   <div id="cf-context" role="cf-context" cf-context></div>
