fixed script tag to point to scripts

--- a/index.html
+++ b/index.html
@@ -35,5 +35,5 @@
   <div id="cf-context" role="cf-context" cf-context></div>
 
 </body>
-<script src="chatbotscript.js"></script>
+<script src="scripts/chatbotscript.js"></script>
 </html>
