--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
       <input type="checkbox" name="verification" id="verification" cf-label="I understand" />
     </fieldset>
 
-    <p></p>
-
     <cf-robot-message cf-questions="Ok, what are you looking for in the City of Albemarle IoT devices?"></cf-robot-message>
 
     <input type="radio" name="searchFor" id="vmax-cameras" value="vmax-cameras" cf-label="V MAX Cameras" />
@@ -30,9 +28,9 @@
     <input type="radio" name="searchFor" id="linksys-routers" cf-label="Linksys Routers" />
 
     <cf-robot-message cf-questions="Ok, let's grab all the VMAX cameras" cf-conditional-searchFor="vmax-cameras"></cf-robot-message>
-    <cf-robot-message cf-questions="Information about VMAX camera"></cf-robot-message>
+    <cf-robot-message cf-questions="Information about VMAX camera" cf-conditional-searchFor="vmax-cameras"></cf-robot-message>
     <cf-robot-message cf-questions="The default login is admin and there is no password" cf-conditional-searchFor="vmax-cameras"></cf-robot-message>
-    <cf-robot-message cf-questions="Here is a list of all VMAX cameras in Albemarle"></cf-robot-message>
+    <cf-robot-message cf-questions="Here is a list of all VMAX cameras in Albemarle" cf-conditional-searchFor="vmax-cameras"></cf-robot-message>
 
   </form>
   <div id="cf-context" role="cf-context" cf-context></div>
