--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <cf-robot-message cf-questions="Ok, what are you looking for in the City of Albemarle IoT devices?"></cf-robot-message>
 
     <input type="radio" name="searchFor" id="vmax-cameras" value="vmax-cameras" cf-label="V MAX Cameras" />
-    <input type="radio" name="searchFor" id="all-port-eighty" cf-label="All Port 80s" />
-    <input type="radio" name="searchFor" id="linksys-routers" cf-label="Linksys Routers" />
+    <input type="radio" name="searchFor" id="all-port-eighty" value="all-port-eighty" cf-label="All Port 80s" />
+    <input type="radio" name="searchFor" id="linksys-routers" value="linksys-routers" cf-label="Linksys Routers" />
 
     <cf-robot-message cf-questions="Ok, let's grab all the VMAX cameras" cf-conditional-searchFor="vmax-cameras"></cf-robot-message>
     <cf-robot-message cf-questions="Information about VMAX camera" cf-conditional-searchFor="vmax-cameras"></cf-robot-message>
