--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <cf-robot-message cf-questions="The default password for VMAX Cameras is none(blank)" cf-conditional-searchFor="vmax-cameras"></cf-robot-message>
 
     <fieldset cf-questions="Whenever you are ready, hit the retrieve data button and I will get that Information for you">
-      <input type="radio" name="dataDisplay" id="displayData" value="display-data" cf-label="Retrieve Data"></input>
+      <input type="radio" name="dataDisplay" id="displayData" value="display-data" cf-label="Retrieve Data" cf-conditional-searchFor="vmax-cameras||linksys-routers"></input>
     </fieldset>
 
   </form>
