final branching for all port eighty

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <cf-robot-message cf-questions="The default username for VMAX Cameras is admin" cf-conditional-searchFor="vmax-cameras"></cf-robot-message>
     <cf-robot-message cf-questions="The default password for VMAX Cameras is none(blank)" cf-conditional-searchFor="vmax-cameras"></cf-robot-message>
 
-    <cf-robot-message cf-questions="Please go to this link::https://coaiot.github.io/scripts/iotData.json" cf-conditional-searchFor="all-port-eighty"></cf-robot-message>
+    
 
     <fieldset cf-questions="Whenever you are ready, hit the retrieve data button and I will get that Information for you">
-      <input type="radio" name="dataDisplay" id="displayData" value="display-data" cf-label="Retrieve Data" cf-conditional-searchFor="vmax-cameras||linksys-routers"></input>
+      <input type="radio" name="dataDisplay" id="displayData" value="display-data" cf-label="Retrieve Data"></input>
     </fieldset>
 
   </form>
